@@ -432,11 +432,26 @@ TOKEN : /* IDENTIFIERS - ADL */
              ("_"(<DIG>){3})*(["e","E"](["+","-"])?(<DIG>){1,3}
              ("_"(<DIG>){3})*)?>
 |
-  < V_STRING: "\"" <V_STRING_CORE> "\"">
+  < #V_STRING_CORE2: (~["\\","\n","\""])*
+              (
+                ("\\\"" (~["\\","\n","\""])*)
+               |
+                ("\n" ["\r", " ", "\t"])
+			   | 
+                (~["\\","\n","\""])
+              )* >
 |
-  < #V_STRING_CORE: (~["\\","\n","\""])*
-              ("\\\"" (~["\\","\n","\""])* "\\\"")*
-              (~["\\","\n","\""])* >
+  < V_STRING: 
+    "\"" 
+  	( 
+      ("\\\"" (~["\"","\n", "\\"])* )
+      |
+      ("\n" (["\r", " ", "\t"])* )
+      |
+      (~["\\","\n","\""])*
+    )*
+    "\""
+  >           
 |
   < V_CHARACTER: "'"~["\\","\n","'"]"'" | <CHAR_REF> >
 |
