@@ -1,3 +1,6 @@
+2007/02/26
+.improved special string parsing
+
 2007/02/23
 .updated assumed value parsing for CDvQuantity
 .added support for CDvQuantity starts with assumed value
